removed unnecessary functions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CallBlock</string>
+    <string name="toggle_hint">Add CallBlock toggle to quick settings</string>
 </resources>
